[package]
name = "superhasher"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true
strip = false
lto = true

[features]
dhat-heap = [] # if you are doing heap profiling

[dependencies]
dhat = "0.3.3"
enum-map = "2.7.3"
hashbrown = "0.15.3"
indexmap = "2.9.0"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
itertools = "0.14.0"
once_cell = "1.21.3"
parking_lot = "0.12.3"
rand = "0.9.1"
ron = "0.10.1"
